Repro for MemoryDumpScheduler race

Bug: 734216
Change-Id: Ic0b450e0613369cc3973c012b3182d5664912b91